SERVER-91028 Revert optimisation that allows index to provide sort key in case of non-simple collation (#22915)

GitOrigin-RevId: fb3a0c82901c8980a3cbe471cd6ce89eaacafdb2